# Copyright (C) Internet Systems Consortium, Inc. ("ISC")
#
# SPDX-License-Identifier: MPL-2.0
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0.  If a copy of the MPL was not distributed with this
# file, you can obtain one at https://mozilla.org/MPL/2.0/.
#
# See the COPYRIGHT file distributed with this work for additional
# information regarding copyright ownership.

install_headers(
    files(
        'ascii.h',
        'assertions.h',
        'async.h',
        'atomic.h',
        'attributes.h',
        'backtrace.h',
        'barrier.h',
        'base32.h',
        'base64.h',
        'buffer.h',
        'commandline.h',
        'condition.h',
        'counter.h',
        'crypto.h',
        'dir.h',
        'dnsstream.h',
        'endian.h',
        'entropy.h',
        'errno.h',
        'error.h',
        'file.h',
        'fips.h',
        'formatcheck.h',
        'fuzz.h',
        'getaddresses.h',
        'hash.h',
        'hashmap.h',
        'heap.h',
        'helper.h',
        'hex.h',
        'histo.h',
        'hmac.h',
        'ht.h',
        'httpd.h',
        'interfaceiter.h',
        'iterated_hash.h',
        'job.h',
        'lex.h',
        'list.h',
        'log.h',
        'loop.h',
        'magic.h',
        'managers.h',
        'md.h',
        'mem.h',
        'meminfo.h',
        'mutex.h',
        'mutexblock.h',
        'net.h',
        'netaddr.h',
        'netmgr.h',
        'netscope.h',
        'nonce.h',
        'once.h',
        'os.h',
        'overflow.h',
        'parseint.h',
        'pause.h',
        'portset.h',
        'proxy2.h',
        'queue.h',
        'quota.h',
        'radix.h',
        'random.h',
        'ratelimiter.h',
        'refcount.h',
        'regex.h',
        'region.h',
        'result.h',
        'rwlock.h',
        'safe.h',
        'serial.h',
        'signal.h',
        'siphash.h',
        'sockaddr.h',
        'spinlock.h',
        'stats.h',
        'stdio.h',
        'stdtime.h',
        'strerr.h',
        'string.h',
        'symtab.h',
        'syslog.h',
        'thread.h',
        'tid.h',
        'time.h',
        'timer.h',
        'tls.h',
        'tm.h',
        'types.h',
        'urcu.h',
        'url.h',
        'utf8.h',
        'util.h',
        'uv.h',
        'work.h',
        'xml.h',
    ),
    subdir: 'isc',
)
