# Copyright (C) Internet Systems Consortium, Inc. ("ISC")
#
# SPDX-License-Identifier: MPL-2.0
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0.  If a copy of the MPL was not distributed with this
# file, you can obtain one at https://mozilla.org/MPL/2.0/.
#
# See the COPYRIGHT file distributed with this work for additional
# information regarding copyright ownership.

install_headers(
    files(
        'alist.h',
        'base64.h',
        'cc.h',
        'ccmsg.h',
        'sexpr.h',
        'symtab.h',
        'symtype.h',
        'types.h',
        'util.h',
    ),
    subdir: 'isccc',

)
