install_headers(
    files(
        'client.h',
        'hooks.h',
        'interfacemgr.h',
        'listenlist.h',
        'notify.h',
        'query.h',
        'server.h',
        'sortlist.h',
        'stats.h',
        'types.h',
        'update.h',
        'xfrout.h',
    ),
    subdir: 'ns',
)
